# mdsplit

./: README.md  pyproject.toml
examples/: just-headings.md
mdsplit/: __init__.py  __main__.py  cli.py  model.py  splitter.py
