[tool.poetry]
name = "mdsplit"
version = "0.1.0"
description = "A CLI tool for splitting markdown files by heading"
authors = ["Tristan Slater <hello@trslater.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pdoc = "^10.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
